<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/AppStyle"
    tools:context="com.apk2try.musicalstructure.PaymentActivity">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/paypal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paypal"
            style="@style/AppStyle"/>

        <RadioButton
            android:id="@+id/wallet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/google"
            style="@style/AppStyle"/>

        <RadioButton
            android:id="@+id/bitcoin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bitcoin"
            style="@style/AppStyle"/>


    </RadioGroup>

    <Button
        android:id="@+id/payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buybutton"/>

</LinearLayout>
