<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FBF8EF"
    tools:context="com.apk2try.musicalstructure.Musical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/background"
        android:padding="2dp"
        android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/background"
                android:padding="2dp"
                android:layout_weight="1">

            <ImageButton
                android:id="@+id/play"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/play"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    style="@style/AppStyle"
                    android:text="@string/play"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/background"
                android:padding="2dp"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/album"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/music"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorAccent"
                        style="@style/AppStyle"
                        android:text="@string/album"/>

            </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/background"
        android:padding="2dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/background"
            android:padding="2dp"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/pause"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/pause"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                style="@style/AppStyle"
                android:text="@string/pause"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/background"
            style="@style/AppStyle"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/stop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/stop"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AppStyle"
                android:background="@color/colorAccent"
                android:text="@string/stop"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
